<resources>
    <string name="app_name">Kwik</string>
    <string name="upcoming_plans">Upcoming plans</string>
    <string name="hosting">Hosting</string>
    <string name="hosting_or_going">Hosting or Going</string>
    <string name="turn_ideas_into_events">Turn ideas into events</string>
    <string name="login">Login</string>
    <string name="hello_there">Hello there!</string>
    <string name="please_sign_in_to_create_or_view_events">Please sign in to create or view events.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="send_otp">Send OTP</string>
    <string name="we_will_send_you_an_otp_to_verify_the_phone_number_standard_sms_rates_may_apply">We will send you an OTP to verify the phone number. Standard SMS rates may apply.</string>
    <string name="create_event">Create Event</string>
    <string name="what_s_the_plan">What\'s the plan?</string>
    <string name="eating">Eating</string>
    <string name="night_out">Night Out</string>
    <string name="movie">Movie</string>
    <string name="custom_plan">Custom\nPlan</string>
    <string name="next">Next</string>
    <string name="when">When?</string>
    <string name="tonight">Tonight</string>
    <string name="_8_pm">8 PM</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_6_pm">6 PM</string>
    <string name="custom_date">Custom\nDate</string>
    <string name="decide_later">Decide\nLater</string>
    <string name="where">Where?</string>
    <string name="domino_s_pizza">Domino\'s Pizza</string>
    <string name="or">or ...</string>
    <string name="choose_later">choose later</string>
    <string name="who_s_invited">Who\'s invited?</string>
    <string name="suggested">Suggested</string>
    <string name="done">Done</string>
    <string name="invited">Invited</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="account_settings">Account Settings</string>
    <string name="required">Required</string>
    <string name="we_are_sending_you_an_otp">We are sending you an OTP!</string>
    <string name="invalid_phone_number_or_code">Invalid phone number or code.</string>
    <string name="login_successful">Login successful!</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="error_connecting_please_check_internet_connection">Error connecting. Please check your internet connection!</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_invitees">Add Invitees</string>
    <string name="background">Background</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="events_organized">Events Organized</string>
    <string name="events_attended">Events Attended</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="description">Description</string>
    <string name="attendees">Attendees</string>
    <string name="event_starts_in">Event starts in</string>
    <string name="updates">Updates</string>
    <string name="whats_the_update">What\'s the update?</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_set">Not set</string>
    <string name="details">Details</string>
    <string name="unable_to_get_permission">Unable to get permission.</string>
    <string name="hours">\nHours</string>
    <string name="event_creation_successful">Event creation successful!</string>
    <string name="_2000_hours">20:00</string>
    <string name="_1800_hours">18:00</string>
    <string name="shared_transition">Shared Transition</string>
    <string name="add_event_description_here">Add event description here</string>
    <string name="add_new_event">Add new event</string>
</resources>
