<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background_gradient">

    <TextView
        android:id="@+id/whats_the_plan_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/what_s_the_plan"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/eating_option_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/eating_option_container"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circular_white_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/movie_option_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/night_out_container"
        app:layout_constraintTop_toBottomOf="@id/whats_the_plan_tv">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/eating"
            android:src="@drawable/ic_eating_out" />

        <TextView
            android:id="@+id/eating_out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/eating"
            android:textAllCaps="true"
            android:textColor="@color/materialBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/night_out_container"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circular_white_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/custom_plan_what"
        app:layout_constraintLeft_toRightOf="@id/eating_option_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whats_the_plan_tv">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:contentDescription="@string/night_out"
            android:src="@drawable/ic_night_out" />

        <TextView
            android:id="@+id/night_out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/night_out"
            android:textAllCaps="true"
            android:textColor="@color/materialBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/movie_option_container"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circular_white_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/next_button_what_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/night_out_container"
        app:layout_constraintTop_toBottomOf="@id/eating_option_container">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/movie"
            android:src="@drawable/ic_movie_out" />

        <TextView
            android:id="@+id/movie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/movie"
            android:textAllCaps="true"
            android:textColor="@color/materialBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/custom_plan_what"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/circular_white_background"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/custom_plan"
        android:textAllCaps="true"
        android:textColor="@color/materialBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/next_button_what_fragment"
        app:layout_constraintLeft_toRightOf="@id/movie_option_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/night_out_container" />

    <ImageView
        android:id="@+id/next_button_what_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>