<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background_gradient">

    <TextView
        android:id="@+id/what_plan_label_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin"
        android:fontFamily="@font/lato"
        android:text="@string/what_s_the_plan"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/what_plan_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/what_plan_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin"
        android:layout_marginEnd="@dimen/material_margin"
        android:layout_marginBottom="@dimen/material_margin"
        android:fontFamily="@font/lato"
        android:textColor="@color/maroon"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/description_label_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/what_plan_label_overview"
        tools:text="Dinner Party" />

    <TextView
        android:id="@+id/description_label_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin"
        android:layout_marginTop="@dimen/login_page_margins"
        android:layout_marginEnd="@dimen/material_margin"
        android:fontFamily="@font/lato"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/description_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/what_plan_overview" />

    <EditText
        android:id="@+id/description_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin"
        android:layout_marginTop="@dimen/material_margin"
        android:layout_marginEnd="@dimen/material_margin"
        android:layout_marginBottom="@dimen/login_page_margins"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:foregroundTint="@android:color/white"
        android:hint="@string/add_event_description_here"
        android:inputType="text"
        android:maxLines="2"
        android:textColor="@android:color/white"
        android:textColorHint="@color/maroon"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/when_where_container_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_label_overview" />

    <LinearLayout
        android:id="@+id/when_where_container_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/who_plan_label_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_overview">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <TextView
                android:id="@+id/when_plan_label_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/when"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/when_plan_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="@color/maroon"
                android:textSize="20sp"
                tools:text="Tommorrow, 6PM" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <TextView
                android:id="@+id/where_plan_label_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/where"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/where_plan_overview"
                app:layout_constraintLeft_toRightOf="@id/when_plan_label_overview"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/what_plan_overview" />

            <TextView
                android:id="@+id/where_plan_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="@color/maroon"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/where_plan_label_overview"
                app:layout_constraintTop_toBottomOf="@id/where_plan_label_overview"
                tools:text="Not Set" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/who_plan_label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin"
        android:fontFamily="@font/lato"
        android:text="@string/who_s_invited"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/who_container_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/when_where_container_overview" />

    <LinearLayout
        android:id="@+id/who_container_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/material_margin"
        app:layout_constraintBottom_toTopOf="@id/done_button_overview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/who_plan_label_overview" />

    <ImageView
        android:id="@+id/done_button_overview"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/login_page_margins"
        android:layout_marginBottom="@dimen/login_page_margins"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>